[tool.poetry]
name = "worewolf"
version = "0.1.0"
description = ""
authors = ["eda3 <gerorin1010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.7.9"
black = "^19.10b0"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
