[tool.poetry]
name = "werewolf"
version = "0.1.0"
description = ""
authors = ["eda3 <gerorin1010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.3.3"
pytest_asyncio = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
