[tool.poetry]
name = "werewolf"
version = "0.1.0"
description = ""
authors = ["eda3 <gerorin1010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.8.3"
mypy = "^0.782"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
